# claude-usage-analyzer

./: Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: release.yml
docs/: devto-post.md  homebrew-formula.rb  reddit-post.txt
npm/: README.md  install.js  package.json
src/: analyzer.rs  main.rs  parser.rs  reporter.rs  types.rs
