[package]
name = "claude-usage-analyzer"
version = "0.1.0"
edition = "2024"
description = "Claude Code usage debugger. Tells you why your tokens burned and what to do about it."
license = "MIT"
repository = "https://github.com/SingggggYee/claude-usage-analyzer"
keywords = ["claude-code", "token", "usage", "debugger", "optimizer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "6"
glob = "0.3"
